--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "^3.3.3",
     "sass": "^1.77.6",
     "vite": "^5.3.2"
   },
   "scripts": {
     "dev": "npx vite",
     "build": "vite build",
+    "build:prod": "NODE_ENV=production && vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "npx vite preview"
   }
