--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-SOCKET_SERVER_URL=https://node-socket-storypointer-bd1078ee47cf.herokuapp.com/
+VITE_SOCKET_SERVER_URL=https://node-socket-storypointer-bd1078ee47cf.herokuapp.com/
